fix for overlapping map

--- a/src/_sass/policy_tool/carousel.scss
+++ b/src/_sass/policy_tool/carousel.scss
@@ -59,5 +59,7 @@
 
 
 @media(max-width: 992px) {
-  .item { min-height: none; }
+  #date-label-policy-issues {
+    .item { min-height: 100px; }
+  }
 }
